@startuml
skinparam ClassAttributeIconSize 0
skinparam monochrome true

package "modelos" {
    abstract class Cliente {
        + id_cliente: int
        + nombre: str
        + correo: str
        + tipo: str
        + {abstract} calcular_total(subtotal: int): int
        + a_dict(): dict
    }

    class ClienteRegular {
        + calcular_total(subtotal): int // -5%
    }
    class ClientePremium {
        + calcular_total(subtotal): int // -20%
    }
    class ClienteCorporativo {
        + calcular_total(subtotal): int // -30%
    }

    class Producto {
        + id_producto: int
        + nombre: str
        + precio: int
        + a_dict(): dict
    }
}

package "servicios" {
    class ClientesServicios {
        - ruta: str
        + leer_todos(): List<Cliente>
        + guardar_todos(lista: List<Cliente>)
        + obtener_nuevo_id(): int
    }
}

class MenuServicios {
    - p_ruta: str
    + menu_principal()
    + simular_venta()
    + submenu_clientes()
    .. validaciones ..
    + validar_nombre(texto)
    + validar_correo(correo)
}

' Herencia
Cliente <|-- ClienteRegular
Cliente <|-- ClientePremium
Cliente <|-- ClienteCorporativo

' Relaciones de dependencia y uso
MenuServicios --> ClientesServicios : "usa para persistencia"
MenuServicios ..> Cliente : "gestiona y calcula total"
MenuServicios ..> Producto : "lee datos de"
ClientesServicios ..> Cliente : "instancia y serializa"

@enduml